# Chatbot-Oncology

./: .env.example  .gitignore  BEFORE_AND_AFTER_TRANSFORMATION.md  CLASSIFIER_QUICK_SUMMARY.txt  CLASSIFIER_VS_LLM_VS_ML.md  COMPLETE_ANSWER_YOUR_QUESTIONS.md  CONVERSATION_FLOW.md  EMOTION_BASED_FLOW.md  EXTRACTED_STRUCTURED_JSON_EXAMPLES.md  HOW_CLASSIFIER_WORKS.md  HOW_TO_FEED_DATA_TO_DATABASE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  QUICK_START_FEED_DATA.txt  README.md  RUN_LOCALLY.md  SETUP_AND_TEST.md  START_HERE.txt  config.py  db.py  pyproject.toml
api/: __init__.py  app.py  schemas.py
classifier/: __init__.py  simple_classifier.py
frontend/: index.html
orchestrator/: __init__.py  engine.py  schemas.py  session_manager.py  session_manager_schemas.py
processes/: definition_schema.py  models.py  schemas.py
rag/: __init__.py  llm_generator.py  retriever.py
scripts/: add_physically_uncomfortable_content.py  add_therapy_states.py  check_db.py  cleanup_db.py  create_rich_sample_data.py  create_sample_data.py  inspect_db.py  interactive_chat.py  test_classifier.py  test_orchestrator.py  test_session_manager.py
services/: __init__.py  session_service.py
sessions/: models.py  schemas.py
states/: models.py  schemas.py
