[project]
name = "relaxbot"
version = "0.1.0"
description = "guided relaxation chatbot for patients"
authors = [
    {name = "Ananya Manohar"}
]
license = "n"
requires-python = "^3.13"
dependencies = [
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.12,<0.16.0)"
]
[tool.poetry]
package-mode = false